[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/Level.gd" type="Script" id=2]
[ext_resource path="res://assets/environment/layers/back.png" type="Texture" id=3]
[ext_resource path="res://assets/environment/layers/middle.png" type="Texture" id=4]
[ext_resource path="res://hud/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/Grasslands Theme.ogg" type="AudioStream" id=6]
[ext_resource path="res://hud/Joypad.tscn" type="PackedScene" id=7]

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BackParallax" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 576, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/BackParallax"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
centered = false

[node name="MiddleParallax" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 880, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/MiddleParallax"]
position = Vector2( 0, 160 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 880, 368 )

[node name="World" type="TileMap" parent="."]
format = 1

[node name="PickupItems" type="TileMap" parent="."]
format = 1

[node name="Obstacles" type="TileMap" parent="."]
format = 1

[node name="PlayerStartPostion" type="Position2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Joypad" parent="HUD" instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -25.0
autoplay = true
[connection signal="score_changed" from="." to="HUD" method="_on_Level_score_changed"]
[connection signal="cherry_changed" from="Player" to="HUD" method="_on_Player_cherry_changed"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="life_changed" from="Player" to="HUD" method="_on_Player_life_changed"]
